<resources>
    <string name="app_name">Work Time Tracker</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_first_name">Type your first name</string>
    <string name="hint_last_name">Type your last name</string>
    <string name="hint_email">Type your e-mail address</string>
    <string name="hint_password">Choose a password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
</resources>