<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:text="@string/sign_up"
            android:textSize="@dimen/default_page_title_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin_vertical"
            android:layout_marginHorizontal="@dimen/default_margin_vertical"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/pageTitle">

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_last_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_password"
                android:inputType="numberPassword" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/hint_confirm_password"
                android:inputType="numberPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginRight="12dp"
            android:layout_marginVertical="@dimen/default_margin_vertical"
            app:layout_constraintTop_toBottomOf="@id/formLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/formLayout"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintVertical_bias="1"/>

        <Button
            android:id="@id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="?attr/colorPrimary"
            android:text="@string/cancel"
            android:layout_marginLeft="12dp"
            app:layout_constraintBottom_toBottomOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/formLayout"
            app:layout_constraintStart_toEndOf="@id/btnRegister"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>